<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
     >

    <item
        android:id="@+id/search_bar"
        android:title="@string/search"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_search_24"
        />
    <item
        android:id="@+id/cart"
        app:showAsAction="ifRoom"
        android:title="@string/cart"
        android:icon="@drawable/ic_baseline_shopping_bag_24"
        app:actionLayout="@layout/custom_menu_item"
        />
    <item android:id="@+id/options"
        android:title="@string/opci_k"
        android:icon="@drawable/ic_baseline_more_vert_24"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/logOut"
        android:title="@string/kijelentkez_s"
        android:icon="@drawable/ic_baseline_exit_to_app_24" />



</menu>