<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC107"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/weolcomeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/udvozlunk"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/hintText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/jelentkezz_be"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif-medium"
        android:labelFor="@id/userName"
        android:text="E-mail cím"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="#FFFEFE"
        android:ems="20"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#333"
        tools:hint="Email cím" />

    <TextView
        android:id="@+id/passLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:labelFor="@id/userPass"
        android:text="@string/jelsz"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />
    <EditText
        android:id="@+id/userPass"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:background="#FFFDFD"
        android:ems="12"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#333"
        />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:onClick="login"
        android:text="@string/bejelentkez_s"
        android:textColor="#FFC107"
        android:textSize="20sp"
        app:strokeColor="#FFC107" />

    <Button
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:onClick="signup"
        android:text="@string/regisztr_ci"
        android:textColor="#FFC107"
        android:textSize="20sp" />
    <Button
        android:id="@+id/google"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:onClick="googleSignin"
        android:text="@string/google_bel_p_s"
        android:textColor="#FFC107"
        android:textSize="20sp" />

</LinearLayout>