<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    android:background="#FFC107"
    >

    <TextView
        android:id="@+id/registrationViewText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/regisztr_ci"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/userNameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/registrationViewText"
        android:fontFamily="sans-serif-medium"
        android:labelFor="@id/userNameEditText"
        android:text="@string/felhaszn_l_n_v"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/userNameLabel"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#FFFEFE"
        android:backgroundTint="#FFFFFF"
        android:inputType="text"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#333"
        android:textColorHint="#333333" />
    <TextView
        android:id="@+id/emailLabelReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userNameEditText"
        android:fontFamily="sans-serif-medium"
        android:labelFor="@id/userEmailEditText"
        android:text="@string/email_c_m"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/userEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/emailLabelReg"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#FFFEFE"
        android:backgroundTint="#FFFFFF"
        android:ems="18"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#333" />

    <TextView
        android:id="@+id/passLabelReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userEmailEditText"
        android:fontFamily="sans-serif-medium"
        android:labelFor="@id/userEmailEditText"
        android:text="@string/jelsz"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/userPassEditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/passLabelReg"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#FFFEFE"
        android:backgroundTint="#FFFFFF"
        android:ems="18"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#333" />
    <TextView
        android:id="@+id/passAgainLabelReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userPassEditText"
        android:fontFamily="sans-serif-medium"
        android:labelFor="@id/userEmailEditText"
        android:text="@string/jelsz_jra"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/userPassAgainEditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/passAgainLabelReg"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#FFFEFE"
        android:backgroundTint="#FFFFFF"
        android:ems="18"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#333" />

    <TextView
        android:id="@+id/phoneLabelReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userPassAgainEditText"
        android:fontFamily="sans-serif-medium"
        android:labelFor="@id/userPhoneEditText"
        android:text="@string/telefonsz_m"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/userPhoneEditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/phoneLabelReg"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#FFFEFE"
        android:backgroundTint="#FFFFFF"
        android:ems="18"
        android:inputType="phone"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#333" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/userPhoneEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        >

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:background="#FFFFFF"
            android:backgroundTint="#FFFFFF"
            android:onClick="cancel"
            android:soundEffectsEnabled="true"
            android:text="@string/m_gsem"
            android:textAllCaps="false"
            android:textColor="#FFC107"
            android:textSize="20sp"
            app:cornerRadius="30dp"
            app:strokeColor="#FFC107" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:background="#FFFFFF"
            android:backgroundTint="#FFFFFF"
            android:onClick="signup"
            android:text="@string/regisztr_ci"
            android:textAllCaps="false"
            android:textColor="#FFC107"
            android:textSize="20sp"
            app:cornerRadius="30dp"
            app:strokeColor="#FFC107" />

    </LinearLayout>


</RelativeLayout>